fix spacing

--- a/resources/main.css
+++ b/resources/main.css
@@ -131,7 +131,7 @@ html, body {
   font-weight: 300;
   font-size: 13px;
   width: 70%;
-  margin: auto auto 1em auto;
+  margin: auto auto 3em auto;
 }
 
 
